nginx.tf
# resource "kubernetes_deployment" "nginx" {
#   metadata {
#     name = "nginx"
#     labels = {
#       app = "nginx"
#     }
#   }
#   spec {
#     replicas = 1
#     selector {
#       match_labels = {
#         app = "nginx"
#       }
#     }
#     template {
#       metadata {
#         labels = {
#           app = "nginx"
#         }
#       }
#       spec {
#         container {
#           name  = "nginx"
#           image = "nginx:1.20.2"
#           port {
#             container_port = 80
#           }
#         }
#       }
#     }
#   }
# }

# resource "kubernetes_service" "nginx" {
#   metadata {
#     name = "nginx"
#     labels = {
#       app = "nginx"
#     }
#   }
#   spec {
#     type = "NodePort"
#     selector = {
#       app = "nginx"
#     }
#     port {
#       port        = 80
#       target_port = 80
#     }
#   }
# }
